[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies.clap]
version = "4.5.29"
features = ["env", "cargo", "derive", "wrap_help"]

[workspace.dependencies.serenity]
version = "0.12.4"
default-features = false
features = [
  "parking_lot",
  "client",
  "builder",
  "cache",
  "chrono",
  "gateway",
  "model",
  "http",
  "utils",
  "rustls_backend",
  "voice_model",
  "voice",
]

[profile.debug-opt]
inherits = "release"
debug = 2
debug-assertions = true
incremental = true

[profile.docker]
inherits = "release"
lto = "thin"
strip = "symbols"
