[package]
name = "base64k"
description = "Convert binary data to Unicode code points"
authors = ["raykast <me@ryan-s.net>"]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ray-kast/the-q/"

[dependencies]
wide = "0.7.5"

[dev-dependencies]
proptest = "1.0.0"
