[package]
name = "discord-pls"
description = "discord pls"
authors = ["raykast <me@ryan-s.net>"]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ray-kast/the-q/"

[dependencies]
async-trait = "0.1.83"
clap = { version = "4.5.23", features = ["env", "cargo", "derive"] }
dotenvy = "0.15.7"
rand = "0.8.5"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
serenity = { workspace = true }
tokio = { version = "1.42.0", features = ["parking_lot", "full", "tracing"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "tracing-log"] }
