[package]
name = "discord-pls"
description = "discord pls"
authors = ["raykast <me@june-s.net>"]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ray-kast/the-q/"

[dependencies]
async-trait = "0.1.88"
clap.workspace = true
dotenvy = "0.15.7"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serenity.workspace = true
tokio = { version = "1.45.1", features = ["parking_lot", "full", "tracing"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "tracing-log"] }
