[package]
name = "paracord"
description = "Helper types for working with Serenity"
authors = ["raykast <me@june-s.net>"]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ray-kast/the-q/"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.86"
base64k.workspace = true
chrono = "0.4.39"
futures-util.workspace = true
ordered-float = "4.6.0"
prost = "0.13.5"
qcore.workspace = true
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serenity.workspace = true
strsim = "0.11.1"
thiserror = "2.0.11"
tokio = { version = "1.43.0", default-features = false, features = ["sync"] }
tracing = "0.1.41"
url = "2.5.4"
zstd = { version = "0.13.2", features = ["experimental"] }
