[package]
name = "paracord"
description = "Helper types for working with Serenity"
authors = ["raykast <me@june-s.net>"]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ray-kast/the-q/"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
base64k.workspace = true
chrono = "0.4.41"
futures-util.workspace = true
ordered-float = "5.0.0"
prost = "0.14.1"
qcore.workspace = true
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serenity.workspace = true
strsim = "0.11.1"
thiserror = "2.0.12"
tokio = { version = "1.45.1", default-features = false, features = ["sync"] }
tracing = "0.1.41"
url = "2.5.4"
zstd = { version = "0.13.3", features = ["experimental"] }
