[package]
name = "paracord"
description = "Helper types for working with Serenity"
authors = ["raykast <me@june-s.net>"]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ray-kast/the-q/"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
base64k.workspace = true
chrono = "0.4.42"
futures-util.workspace = true
ordered-float = "5.1.0"
prost = "0.14.3"
qcore.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serenity.workspace = true
strsim = "0.11.1"
thiserror.workspace = true
tokio = { version = "1.49.0", default-features = false, features = ["sync"] }
tracing.workspace = true
url = "2.5.8"
zstd = { version = "0.13.3", features = ["experimental"] }
