[package]
name = "protock"
description = "Tool to check protobuf file compatibility"
authors = ["raykast <me@june-s.net>"]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ray-kast/the-q/"

[dependencies]
anyhow = "1.0.95"
clap.workspace = true
git2 = "0.20.0"
prost = "0.13.5"
prost-types = "0.13.5"
shrec = { version = "0.1.0", path = "../shrec" }
tempfile = "3.16.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["tracing-log", "fmt"] }
