[package]
name = "protock"
description = "Tool to check protobuf file compatibility"
authors = ["raykast <me@june-s.net>"]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ray-kast/the-q/"

[dependencies]
anyhow = "1.0.100"
clap.workspace = true
git2 = "0.20.2"
prost = "0.14.1"
prost-types = "0.14.1"
shrec.workspace = true
tempfile = "3.23.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["tracing-log", "fmt"] }
