[package]
name = "protock"
description = "Tool to check protobuf file compatibility"
authors = ["raykast <me@june-s.net>"]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ray-kast/the-q/"

[dependencies]
anyhow = "1.0.100"
clap.workspace = true
git2 = "0.20.3"
mid-tools.workspace = true
prost = "0.14.3"
prost-types = "0.14.3"
tempfile = "3.24.0"
tracing.workspace = true
tracing-subscriber = { version = "0.3.22", features = ["tracing-log", "fmt"] }
