[package]
name = "qmacros"
description = "+ - ? size_difference"
authors = ["raykast <me@ryan-s.net>"]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ray-kast/the-q/"

[lib]
proc-macro = true

[dependencies]
darling = "0.14.2"
proc-macro2 = "1.0.50"
proc-macro2-diagnostics = "0.9.1"
quote = "1.0.23"
syn = { version = "1.0.107", features = ["fold"] }
thiserror = "1.0.38"
