[package]
name = "qmacros"
description = "+ - ? size_difference"
authors = ["raykast <me@ryan-s.net>"]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ray-kast/the-q/"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.92"
quote = "1.0.38"
syn = { version = "2.0.92", features = ["extra-traits", "fold", "full"] }
thiserror = "2.0.9"
