[package]
name = "qmacros"
description = "+ - ? size_difference"
authors = ["raykast <me@june-s.net>"]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ray-kast/the-q/"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.105"
quote = "1.0.43"
syn = { version = "2.0.114", features = ["extra-traits", "fold", "full"] }
thiserror.workspace = true
