[package]
name = "shrec"
description = "the Simple Human-readable Regular Expression Compiler"
authors = ["raykast <me@ryan-s.net>"]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ray-kast/the-q/"

[dependencies]
hashbrown = { version = "0.15.0" }
indexmap = "2.0.0"
thiserror = "1.0.44"

[dev-dependencies]
proptest = "1.2.0"
