[package]
name = "the-q"
description = "Is he...y’know,"
authors = ["raykast <me@june-s.net>"]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ray-kast/the-q/"

build = "build.rs"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89" # TODO: remove async-trait?
clap.workspace = true
dotenvy = "0.15.7"
futures-util.workspace = true
hashbrown.workspace = true
hostname = "0.4.2"
jpeggr.workspace = true
mid-tools.workspace = true
notify = "8.2.0"
once_cell = { version = "1.21.3", features = ["parking_lot"] }
ordered-float = "5.1.0"
paracord.workspace = true
prost = "0.14.3"
qcore.workspace = true
reqwest = { version = "0.13.1", features = ["deflate", "gzip", "brotli", "zstd"] }
serenity.workspace = true
songbird = { version = "0.5.0", features = ["serenity"] }
strsim = "0.11.1"
symphonia = { version = "0.5.5", features = ["all"] }
tempfile = "3.24.0"
tokio = { version = "1.49.0", features = ["parking_lot", "full", "tracing"] }
tracing.workspace = true
tracing-loki = { version = "0.2.6", default-features = false, features = ["rustls", "compat-0-2-1"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "tracing-log"] }
url = "2.5.8"
walkdir = "2.5.0"
webp = "0.3.1"

[dev-dependencies]
proptest.workspace = true

[build-dependencies]
glob = "0.3.3"
prost-build = "0.14.3"
